[project]
name = "sampling_planners"
version = "0.0.1"
description = "Simple repository for sampling planning for discrete environments"
authors = [{ name = "Ivan Domrachev", email = "i.domrachev@kaist.ac.kr" }]
readme = "README.md"
requires-python = ">=3.10"

dependencies = ["jax>=0.4"]

[project.optional-dependencies]
dev = ["pre-commit", "ruff", "pytest", "robot_descriptions>=1.12"]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sampling_planners*"]

[tool.ruff]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
line-length = 120

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pytest]
filterwarnings = "ignore:.*U.*mode is deprecated:DeprecationWarning"
